--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
         <nav class="header__menu">
             <a href="index.html" class="header__menu__link">Inicio</a>
             <a href="about.html" class="header__menu__link">Sobre mi</a>
-            <a href="education.html" class="header__menu__link">Educación</a>
+            <a href="education.html" class="header__menu__link">Formación</a>
             <a href="projects.html" class="header__menu__link">Proyectos</a>
         </nav>
     </header>
