arreglo pagina educacion

--- a/education.html
+++ b/education.html
@@ -24,34 +24,37 @@
             <h1 class="educacion__titulo">Mi Educación y Certificaciones</h1>
             <div class="educacion__item">
                 <div class="educacion__item__header">
-                    <span class="material-icons educacion__item__icono">school</span>
                     <h2 class="educacion__item__titulo">Tecnicatura Universitaria en Programación</h2>
+                    <span class="material-icons educacion__item__icono">school</span>
+                    <span class="badge in-progress">En curso</span>
                 </div>
                 <p class="educacion__item__texto">Universidad Tecnológica Nacional (UTN) FRBB - 2025</p>
                 <p class="educacion__item__texto">Formación integral en desarrollo de software, algoritmos, estructuras de datos, programación orientada a objetos y desarrollo de aplicaciones.</p>
             </div>
             <div class="educacion__item">
                 <div class="educacion__item__header">
-                    <span class="material-icons educacion__item__icono">code</span>
                     <h2 class="educacion__item__titulo">Full Stack Python</h2>
+                    <span class="material-icons educacion__item__icono">code</span>
+                    <span class="badge completed">Completado</span>
                 </div>
                 <p class="educacion__item__texto">Programa Codo a Codo 4.0 - Gobierno de la Provincia de Buenos Aires</p>
                 <p class="educacion__item__texto">Programa intensivo de desarrollo web Full Stack utilizando Python como lenguaje principal. Abarca desde fundamentos de programación hasta desarrollo de aplicaciones web completas.</p>
             </div>
             <div class="educacion__item">
                 <div class="educacion__item__header">
-                    <span class="material-icons educacion__item__icono">security</span>
                     <h2 class="educacion__item__titulo">Ciberseguridad en la Era Digital</h2>
+                    <span class="material-icons educacion__item__icono">security</span>
+                    <span class="badge completed">Completado</span>
                 </div>
                 <p class="educacion__item__texto">Universidad Nacional de Tres de Febrero (UNTREF)</p>
                 <p class="educacion__item__texto">Programa especializado en fundamentos de ciberseguridad, protección de datos, análisis de vulnerabilidades y mejores prácticas de seguridad informática.</p>
             </div>
             <div class="educacion__item">
                 <div class="educacion__item__header">
-                    <span class="material-icons educacion__item__icono">computer</span>
                     <h2 class="educacion__item__titulo">Programa Alura ONE: Oracle Next Education</h2>
+                    <span class="material-icons educacion__item__icono">computer</span>
+                    <span class="badge in-progress">En curso</span>
                 </div>
-                <p class="educacion__item__texto">Actualmente en curso</p>
                 <p class="educacion__item__texto">Formación completa que abarca fundamentos de programación, desarrollo frontend, backend y ciencia de datos. En la etapa inicial, repaso las bases de programación y desarrollo web frontend, complementadas con habilidades blandas y desarrollo profesional. El programa continúa con especializaciones en backend y análisis de datos, proporcionando una formación tecnológica versátil que responde a las demandas actuales del mercado laboral en tecnología.</p>
             </div>
         </section> <!-- Cierra la sección de educación -->
