mejora de menu, footer y correciones menores del css

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <img src="./img/imagen.jpg" alt="Foto de Federico Heinrich desarrolando un proyecto" class="presentacion__foto">
     </main>
     <footer class="footer">
-        <p class="footer__texto">Desarrollado por Federico Heinrich</p>
+        <p class="footer__texto">Desarrollado por Federico Heinrich - © 2025 TecnoTech. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
