--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p class="footer__texto">Desarrollado por Federico Heinrich</p>
+        <p class="footer__texto">Desarrollado por Federico Heinrich - © 2025 TecnoTech. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
