nombres mas especificos en carpeta img, nombres de hojas de estilos en ingles y correciones menores

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/proyectos.css">
+    <link rel="stylesheet" href="./styles/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
             <!-- Portafolio Web -->
             <div class="proyectos__caja-proyecto">
                 <div class="proyectos__caja-proyecto__caja-imagen">
-                    <img src="./img/Captura de pantalla 2025-03-24 230947.png" alt="Portafolio Web Personal">
+                    <img src="./img/portfolio.png" alt="Portafolio Web Personal">
                 </div>
                 <div class="proyectos__caja-proyecto__caja-contenido">
                     <h3>Portafolio Web Personal</h3>
@@ -50,7 +50,7 @@
             <!-- Challenge Alura -->
             <div class="proyectos__caja-proyecto">
                 <div class="proyectos__caja-proyecto__caja-imagen">
-                    <video src="./img/Grabación de pantalla 2025-03-24 232328.mp4" autoplay loop muted alt="Challenge Alura Oracle ONE">
+                    <video src="./img/challenge.mp4" autoplay loop muted alt="Challenge Alura Oracle ONE">
                 </div>
                 <div class="proyectos__caja-proyecto__caja-contenido">
                     <h3>Challenge Alura Oracle ONE</h3>
@@ -74,7 +74,7 @@
             <!-- Ejercicios de APIs -->
             <div class="proyectos__caja-proyecto">
                 <div class="proyectos__caja-proyecto__caja-imagen">
-                    <img src="" alt="Ejercicios de APIs">
+                    <img src="./img/diagrama-clases.jpg" alt="Ejercicios de APIs">
                 </div>
                 <div class="proyectos__caja-proyecto__caja-contenido">
                     <h3>Ejercicios de APIs</h3>
@@ -83,6 +83,7 @@
                         <span>JavaScript</span>
                         <span>Flask</span>
                         <span>JSON</span>
+                        <span>Python</span>
                     </div>
                     <div class="proyectos__caja-proyecto__caja-contenido__caja-links">
                         <a href="" target="_blank" class="btn btn-github">
@@ -121,7 +122,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Federico Heinrich. Todos los derechos reservados.</p>
+        <p c>&copy; 2024 Federico Heinrich. Todos los derechos reservados.</p>
     </footer>
 
     <script>
