--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,7 @@
     </main>
 
     <footer>
-        <p c>&copy; 2024 Federico Heinrich. Todos los derechos reservados.</p>
+        <p class="footer__texto">Desarrollado por Federico Heinrich - © 2025 TecnoTech. Todos los derechos reservados.</p>
     </footer>
 
     <script>
