--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p class="footer__texto">Desarrollado por Federico Heinrich - © 2025 TecnoTech. Todos los derechos reservados.</p>
     </footer>
 
