favicon segun tema del navegador

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link id="favicon-light" rel="icon" href="./img/favicon.svg" type="image/svg+xml" media="(prefers-color-scheme: light)">
+    <link id="favicon-dark" rel="icon" href="./img/favicon-mode-dark.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)">
+
 </head>
 <body>
     <header class="header">
