--- a/education.html
+++ b/education.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./styles/education.css">
+    <link id="favicon-light" rel="icon" href="./img/favicon.svg" type="image/svg+xml" media="(prefers-color-scheme: light)">
+    <link id="favicon-dark" rel="icon" href="./img/favicon-mode-dark.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)">
 </head>
 <body>
     <header class="header">
