--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
-    
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="./img/favicon-mode-dark.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)">
 </head>
 <body>
     <header class="header">
